# autosort

./: CMakeLists.txt  config.txt  styles.css
src/: headers.h  main.c
src/headers/: headers.h  typedef.h
src/ui/: complete_dialog.c  config_input.c  file_picker.c  setup_ui.c
src/ui/callbacks/: on_dir_select.c
src/utils/: dir_utils.c  file_utils.c
